--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body{
 
 #box{
     font-size:25px;
-    color:#ddd;
+    color:PURPLE;
     background-color:#2435F3;
     /* #282F32; */
     text-align:center;
